# pwsafe

./: .builds.yml  .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .gitpod.yml.original  .travis.yml  @TRUNK_REVISION.txt  @Trunk_revision.txt  AboutDlg.cpp  AboutDlg.h  AddDlg.cpp  AddDlg.h  AddShortcutDlg.cpp  AddShortcutDlg.h  AdvancedDlg.cpp  AdvancedDlg.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ChangeLog  ClearQuestionDlg.cpp  ClearQuestionDlg.h  ColumnChooserDlg.cpp  ColumnChooserDlg.h  ColumnChooserLC.cpp  ColumnChooserLC.h  ColumnPickerDlg.h  CompareResultsDlg.cpp  CompareResultsDlg.h  CompareXDlg.h  ConfirmDeleteDlg.cpp  ConfirmDeleteDlg.h  ControlExtns.cpp  ControlExtns.h  CoolMenu.cpp  CoolMenu.h  CreateShortcutDlg.cpp  CreateShortcutDlg.h  CryptKeyEntry.cpp  (+275 more)
help/: .gitignore  CMakeLists.txt  Create_wxWidgetsHelp.bat  Makefile  Makefile.freebsd  Makefile.linux  Makefile.macos  Makefile.openbsd  Makefile.windows  Notes for Creating Help file for Windows wxWidgets Builds.txt  README.win.wx.txt  Windows_wxWidgetsHelp.vbs
help/cmake/: html_help_hhc.cmake
help/default/: README.txt  pwsafe.hhc  pwsafe.hhk  pwsafe.hhp
help/default/html/: Shortcut_Keys.html  Welcome.html  about_combinations.html  about_pws.html  about_pws_yubi.html  advanced.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  compare_results.html  create_new_db.html  credits.html  display_tab.html  edit_menu.html  emerbackups.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_att.html  entering_pwd_date.html  entering_pwd_pp.html  execute_string.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  images.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  named_password_policies.html  password_history.html  password_history_tab.html  password_policies.html  popups.js  (+14 more)
help/default_wx/: pwsafe.hhc  pwsafe.hhk  pwsafe.hhp
help/default_wx/html/: Welcome.html  about_pws.html  about_pws_yubi.html  advanced.html  aliases.html  autotype.html  backups_tab.html  change_combo.html  cli.html  compare_results.html  create_new_db.html  display_tab.html  edit_menu.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_att.html  export.html  file_menu.html  filters.html  help_menu.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  named_password_policies.html  preferences.html  run_command.html  searching.html  security_tab.html  shortcuts_tab.html  system_tab.html  system_tray.html  upgrade_from_v1x.html  view_menu.html  wzfinish.html  wzselectdb.html
help/pwsafeDE/: pwsafe.hhp  pwsafeDE.chm  pwsafeDE.hhc  pwsafeDE.hhp
help/pwsafeDE/html/: Welcome.html  about_combinations.html  about_pws.html  about_pws_yubi.html  advanced.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  compare_results.html  create_new_db.html  credits.html  display_tab.html  edit_menu.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_date.html  entering_pwd_pp.html  execute_string.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  images.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  named_password_policies.html  password_history.html  password_history_tab.html  password_policies.html  preferences.html  pws_main.htm  retrieve_pwd.html  run_command.html  (+11 more)
help/pwsafeES/: pwsafe.hhc  pwsafe.hhk  pwsafe.hhp
help/pwsafeES/html/: Shortcut_Keys.html  Welcome.html  about_combinations.html  about_pws.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  credits.html  display_tab.html  edit_menu.html  entering_pwd_add.html  entering_pwd_date.html  entering_pwd_pp.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  imp_exp_text_details.html  manage_menu.html  menu_toolbar.html  misc_tab.html  password_history.html  password_history_tab.html  (+8 more)
help/pwsafeFR/: pws_toc.hhc  pwsafe.hhp  pwsafefr.chm  pwsafefr.hhc  pwsafefr.hhp
help/pwsafePL/: pwsafe.hhp  pwsafePL.hhc  pwsafePL.hhp
help/pwsafeRU/: pws_toc.hhc  pwsafe.hhp  pwsafeRU.hhc  pwsafeRU.hhk  pwsaferu.chm  pwsaferu.hhp
help/pwsafeRU_new/: pwsafe.hhc  pwsafe.hhk  pwsafe.hhp
help/pwsafeSK/: pwsafe.hhp  pwsafeSK.hhc  pwsafeSK.hhk
help/pwsafeSK_wx/: pwsafe.hhp  pwsafeSK.hhc  pwsafeSK.hhk
help/pwsafeZH/: README.txt  pwsafe.hhc  pwsafe.hhp  pwsafeZH.chm  pwsafeZH_CN.chm
help/pwsafefr-html/: pwsafefr.hhp
src/core/: .gitignore  AES.cpp  AES.h  BlowFish.cpp  BlowFish.h  CMakeLists.txt  CheckVersion.cpp  CheckVersion.h  Command.cpp  Command.h  CommandInterface.h  CoreAlias.cpp  CoreImpExp.cpp  CoreOtherDB.cpp  CustomFields.cpp  CustomFields.h  DBCompareData.h  ExpiredList.cpp  ExpiredList.h  Fish.h  Item.cpp  Item.h  ItemAtt.cpp  ItemAtt.h  ItemData.cpp  ItemData.h  ItemField.cpp  ItemField.h  KeyWrap.cpp  KeyWrap.h  Makefile  Match.cpp  Match.h  PWCharPool.cpp  PWCharPool.h  PWHistory.cpp  PWHistory.h  PWPolicy.cpp  PWPolicy.h  PWSAuxParse.cpp  (+94 more)
src/os/: CMakeLists.txt  KeySend.h  UUID.h  cleanup.h  debug.h  dir.h  env.h  file.h  fmtspecs_cvt.h  funcwrap.h  lib.h  logit.h  media.h  mem.h  pws_str.h  pws_tchar.h  rand.h  registry.h  run.h  sleep.h  typedefs.h  utf8conv.h
src/test/: AESTest.cpp  AESTest.h  AliasShortcutTest.cpp  AuxParseTest.cpp  Base32Test.cpp  BlowFishTest.cpp  BlowFishTest.h  CMakeLists.txt  CommandsTest.cpp  FileEncDecTest.cpp  FileV3Test.cpp  FileV4Test.cpp  HMAC_SHA1Test.cpp  HMAC_SHA1Test.h  HMAC_SHA256Test.cpp  HMAC_SHA256Test.h  ImportTextTest.cpp  ImportXmlTest.cpp  ItemAttTest.cpp  ItemDataTest.cpp  ItemFieldTest.cpp  ItemFieldTest.h  KeyWrapTest.cpp  KeyWrapTest.h  MRUListTest.cpp  Makefile  Makefile.macos  MyStringTest.h  OSTest.cpp  SHA1Test.cpp  SHA256Test.cpp  SHA256Test.h  StringXTest.cpp  StringXTest.h  TOTPTest.cpp  TestCommon.h  TwoFishTest.cpp  TwoFishTest.h  UtilTest.cpp  ValidateTest.cpp  (+27 more)
(+4983 files in other folders)
